--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Poll/PollBlock.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Poll/PollBlock.cshtml
@@ -4,7 +4,7 @@
     <div class="block-title card-header">
         @T("Polls.Title")
     </div>
-    <div class="block-body listbox card">
+    <div class="block-body listbox card-block">
         @Html.Partial("_Poll", Model)
     </div>
 </div>
