--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Blog/BlogTags.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Blog/BlogTags.cshtml
@@ -7,7 +7,7 @@
             @T("Blog.TagCloud")
         </div>
         <div class="block-body listbox card-block">
-            <ul class="list-unstyled">
+            <ul class="list-unstyled m-b-0">
                 @foreach (var item in Model.Tags)
                 {
                     <li><a href="@Url.RouteUrl("BlogByTag", new { tag = item.Name })" style="font-size:@(Model.GetFontSize(item))%;">@item.Name</a></li>
