--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Filter/ProductsMultiSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Filter/ProductsMultiSelect.cshtml
@@ -16,8 +16,8 @@
 
 	@foreach (var itm in Model.Context.Criteria.Where(c => c.IsInactive).OrderBy(c => c.Value))
 	{
-		<div class="checkbox-container">
-			<label class="checkbox inline ellipsis@(Model.Context.IsActive(itm) ? " highlight" : "")" title="@itm.ToDescription()">
+		<div class="checkbox-container checkbox">
+			<label class="ellipsis@(Model.Context.IsActive(itm) ? " highlight" : "")" title="@itm.ToDescription()">
 				<input type="checkbox" name="checkFilter@(Model.Context.Criteria.IndexOf(itm))" value="@itm.ToString()"@(Model.Context.IsActive(itm) ? " checked=\"checked\"" : "") />
                 @itm.ToDescription() <span class="count">(@itm.MatchCount)</span>
 			</label>
