--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/_AddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/_AddToCart.cshtml
@@ -22,7 +22,7 @@
 
     @if (!Model.AddToCart.DisableBuyButton || !Model.AddToCart.DisableWishlistButton)
     {
-        <div class="price-details price-block line well" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+        <div class="price-details price-block line card card-block m-t-1" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
             @if(!Model.ProductPrice.CallForPrice) 
             {
                 <div class="clearfix">
